--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   # fl_chart: ^0.55.2
   charts_flutter: ^0.12.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
